updated the homedashboard recipe card after ui change